--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body>
 
-<div class="bg-grid"></div>
-<div class="bg-particles"></div>
-
 <header class="nav">
-  <div class="logo">⚡ CLAWDBOTX</div>
+  <div class="logo-text">CLAWDBOTX</div>
   <nav>
     <a href="#home">Home</a>
     <a href="#about">About</a>
@@ -23,12 +20,11 @@
 </header>
 
 <section class="hero" id="home">
+  <div class="hero-overlay"></div>
   <div class="hero-content">
-    <!-- LOGO CLAWDBOTX -->
     <img src="logo.png" class="logo-main" alt="ClawdBotX Logo">
-
     <h1>CLAWDBOTX</h1>
-    <p>Autonomous AI system powering crypto intelligence, automation, and digital dominance.</p>
+    <p>Next-generation AI system for crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
       <a href="https://x.com/clawdbotx" target="_blank" class="btn pulse">Follow @clawdbotx</a>
       <a href="#features" class="btn outline">Explore</a>
@@ -37,32 +33,30 @@
 </section>
 
 <section class="about" id="about">
-  <div class="container">
-    <h2>About ClawdBotX</h2>
-    <p>
-      ClawdBotX is a next-generation AI agent built to analyze, predict, and execute across crypto and social ecosystems.
-    </p>
+  <h2>About ClawdBotX</h2>
+  <p>
+    ClawdBotX is an advanced AI agent designed to analyze, predict, and automate across crypto and social ecosystems.
+  </p>
 
-    <div class="cards" id="features">
-      <div class="card glow">
-        <h3>⚡ AI Core</h3>
-        <p>Real-time autonomous intelligence with adaptive learning.</p>
-      </div>
-      <div class="card glow">
-        <h3>💎 Crypto Intelligence</h3>
-        <p>On-chain analytics, signals, and automated strategies.</p>
-      </div>
-      <div class="card glow">
-        <h3>🧠 Social AI</h3>
-        <p>Behavioral analysis and network-level automation.</p>
-      </div>
+  <div class="cards" id="features">
+    <div class="card">
+      <h3>⚡ AI Core</h3>
+      <p>Autonomous intelligence with real-time data processing.</p>
+    </div>
+    <div class="card">
+      <h3>💎 Crypto Intelligence</h3>
+      <p>On-chain analytics, signals, and smart automation.</p>
+    </div>
+    <div class="card">
+      <h3>🧠 Social AI</h3>
+      <p>Adaptive interaction and network-level intelligence.</p>
     </div>
   </div>
 </section>
 
 <section class="cta">
-  <h2>Enter the AI Era</h2>
-  <p>Follow ClawdBotX on X and witness the evolution of AI x Crypto.</p>
+  <h2>Enter the Future</h2>
+  <p>Follow ClawdBotX on X and join the AI x Crypto revolution.</p>
   <a href="https://x.com/clawdbotx" target="_blank" class="btn pulse">Follow @clawdbotx</a>
 </section>
 
