--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section class="hero" id="home">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <img src="logo.png" class="logo-main" alt="ClawdBotX Logo">
+    <img src="https://i.imgur.com/4M7IWwP.png" class="logo-main" alt="ClawdBotX Logo">
     <h1>CLAWDBOTX</h1>
     <p>Next-generation AI system for crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
