--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 <section class="hero" id="home">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <img src="https://i.imgur.com/4M7IWwP.png" class="logo-main" alt="ClawdBotX Logo">
+    <div class="logo-main">
+<svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+<circle cx="100" cy="100" r="80" stroke="red" stroke-width="4"/>
+<path d="M60 100 C60 60, 140 60, 140 100 C140 140, 60 140, 60 100Z" stroke="red" stroke-width="4" fill="none"/>
+<circle cx="80" cy="90" r="5" fill="red"/>
+<circle cx="120" cy="90" r="5" fill="red"/>
+</svg>
+</div>
     <h1>CLAWDBOTX</h1>
     <p>Next-generation AI system for crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
