--- a/index.html
+++ b/index.html
@@ -4,8 +4,206 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ClawdBotX</title>
-<link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Orbitron", sans-serif;
+}
+
+body {
+  background: #050000;
+  color: white;
+}
+
+/* NAVBAR */
+.nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 14px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(0,0,0,0.7);
+  backdrop-filter: blur(10px);
+  z-index: 1000;
+}
+
+.logo-text {
+  font-weight: 800;
+  color: #ff1a1a;
+  letter-spacing: 2px;
+}
+
+.nav nav a {
+  margin: 0 12px;
+  text-decoration: none;
+  color: #aaa;
+  transition: 0.3s;
+}
+
+.nav nav a:hover {
+  color: #ff1a1a;
+}
+
+.btn-nav {
+  padding: 8px 18px;
+  background: linear-gradient(135deg, #ff1a1a, #ff4d4d);
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+}
+
+/* HERO */
+.hero {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  background: radial-gradient(circle, rgba(255,0,0,0.18), transparent 60%);
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+}
+
+/* LOGO CENTER */
+.logo-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.logo-main {
+  width: 200px;
+  max-width: 65%;
+  height: auto;
+  display: block;
+  filter: drop-shadow(0 0 40px red);
+  animation: float 3s ease-in-out infinite;
+}
+
+/* LOGO FLOAT */
+@keyframes float {
+  0% { transform: translateY(0) scale(1); }
+  50% { transform: translateY(-12px) scale(1.05); }
+  100% { transform: translateY(0) scale(1); }
+}
+
+.hero h1 {
+  font-size: 64px;
+  color: #ff1a1a;
+  text-shadow: 0 0 40px red;
+}
+
+.hero p {
+  max-width: 600px;
+  margin: 18px auto;
+  color: #ccc;
+}
+
+.hero-btn {
+  margin-top: 22px;
+}
+
+.btn {
+  padding: 12px 30px;
+  background: linear-gradient(135deg, #ff1a1a, #ff4d4d);
+  border-radius: 30px;
+  text-decoration: none;
+  color: white;
+  margin: 0 10px;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 25px red;
+}
+
+.btn.outline {
+  background: transparent;
+  border: 2px solid red;
+}
+
+/* ABOUT */
+.about {
+  padding: 110px 40px;
+  text-align: center;
+  background: linear-gradient(180deg, #050000, #120000);
+}
+
+.about h2 {
+  font-size: 42px;
+  color: #ff1a1a;
+  margin-bottom: 20px;
+}
+
+.about p {
+  max-width: 700px;
+  margin: auto;
+  color: #aaa;
+}
+
+/* CARDS */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 25px;
+  margin-top: 60px;
+}
+
+.card {
+  background: rgba(255,0,0,0.05);
+  border: 1px solid rgba(255,0,0,0.3);
+  padding: 30px;
+  border-radius: 18px;
+  transition: 0.3s;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 0 30px rgba(255,0,0,0.5);
+}
+
+.card h3 {
+  color: #ff1a1a;
+  margin-bottom: 10px;
+}
+
+/* CTA */
+.cta {
+  padding: 90px 20px;
+  text-align: center;
+  background: radial-gradient(circle, #1a0000, #000);
+}
+
+footer {
+  padding: 20px;
+  text-align: center;
+  color: #555;
+  background: black;
+}
+
+/* RESPONSIVE HP */
+@media (max-width: 768px) {
+  .hero h1 {
+    font-size: 42px;
+  }
+  .logo-main {
+    width: 140px;
+  }
+}
+</style>
 </head>
 <body>
 
@@ -20,15 +218,17 @@
 </header>
 
 <section class="hero" id="home">
-  <div class="hero-overlay"></div>
   <div class="hero-content">
+
+    <!-- LOGO ASLI CLAWDBOTX (EMBED BASE64) -->
     <div class="logo-wrapper">
-  <img src="clawdbotx.png" class="logo-main" alt="ClawdBotX Logo">
-</div>
+      <img class="logo-main" src="data:image/jpeg;base64,{{BASE64_LOGO}}" alt="ClawdBotX Logo">
+    </div>
+
     <h1>CLAWDBOTX</h1>
-    <p>Next-generation AI system for crypto intelligence, automation, and digital evolution.</p>
+    <p>Autonomous AI system powering crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
-      <a href="https://x.com/clawdbotx" target="_blank" class="btn pulse">Follow @clawdbotx</a>
+      <a href="https://x.com/clawdbotx" target="_blank" class="btn">Follow @clawdbotx</a>
       <a href="#features" class="btn outline">Explore</a>
     </div>
   </div>
@@ -37,13 +237,13 @@
 <section class="about" id="about">
   <h2>About ClawdBotX</h2>
   <p>
-    ClawdBotX is an advanced AI agent designed to analyze, predict, and automate across crypto and social ecosystems.
+    ClawdBotX is a futuristic AI agent built to analyze, predict, and automate across crypto and social ecosystems.
   </p>
 
   <div class="cards" id="features">
     <div class="card">
       <h3>⚡ AI Core</h3>
-      <p>Autonomous intelligence with real-time data processing.</p>
+      <p>Real-time autonomous intelligence with adaptive learning.</p>
     </div>
     <div class="card">
       <h3>💎 Crypto Intelligence</h3>
@@ -51,7 +251,7 @@
     </div>
     <div class="card">
       <h3>🧠 Social AI</h3>
-      <p>Adaptive interaction and network-level intelligence.</p>
+      <p>Behavioral analysis and network-level automation.</p>
     </div>
   </div>
 </section>
@@ -59,7 +259,7 @@
 <section class="cta">
   <h2>Enter the Future</h2>
   <p>Follow ClawdBotX on X and join the AI x Crypto revolution.</p>
-  <a href="https://x.com/clawdbotx" target="_blank" class="btn pulse">Follow @clawdbotx</a>
+  <a href="https://x.com/clawdbotx" target="_blank" class="btn">Follow @clawdbotx</a>
 </section>
 
 <footer>
