--- a/index.html
+++ b/index.html
@@ -1,86 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ClawdBotX</title>
+<link rel="stylesheet" href="style.css">
 
 <style>
-body {
+/* RESET */
+* {
   margin: 0;
-  background: black;
-  color: white;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
 
-/* CENTER LAYOUT */
-.container {
+body {
+  background: #000;
+  color: #fff;
+}
+
+/* HERO SECTION */
+.hero {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 80px 20px;
 }
 
-/* LOGO */
-.logo {
+/* LOGO CENTER */
+.logo-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.logo-main {
   width: 200px;
-  max-width: 60%;
+  max-width: 70%;
   height: auto;
   display: block;
-  margin: 0 auto 20px auto;
-  filter: drop-shadow(0 0 25px red);
-}
-
-/* TITLE */
-h1 {
-  color: red;
-  font-size: 42px;
-  margin: 0;
 }
 
 /* TEXT */
+h1 {
+  font-size: 48px;
+  margin-top: 10px;
+  color: #ff1a1a;
+}
+
 p {
-  color: #aaa;
-  margin-top: 8px;
+  margin-top: 10px;
+  color: #ccc;
+  font-size: 16px;
 }
 
 /* BUTTON */
-a.btn {
+.btn {
   display: inline-block;
   margin-top: 20px;
-  padding: 10px 25px;
-  background: red;
+  padding: 12px 28px;
+  background: #ff1a1a;
   color: white;
   text-decoration: none;
-  border-radius: 20px;
+  border-radius: 25px;
   font-size: 14px;
 }
 
-/* MOBILE */
-@media (max-width: 600px) {
-  .logo {
+/* RESPONSIVE HP */
+@media (max-width: 768px) {
+  .logo-main {
     width: 130px;
   }
   h1 {
-    font-size: 32px;
+    font-size: 36px;
   }
 }
 </style>
 </head>
 <body>
 
-<div class="container">
+<section class="hero">
+
   <div>
     <!-- LOGO CLAWDBOTX -->
-    <img src="clawdbotx.png" class="logo" alt="ClawdBotX Logo">
+    <div class="logo-wrapper">
+      <img src="./clawdbotx.png" class="logo-main" alt="ClawdBotX Logo">
+    </div>
 
     <h1>CLAWDBOTX</h1>
-    <p>Simple • Elegant • AI</p>
+    <p>AI • Crypto • Automation</p>
 
-    <a href="https://x.com/clawdbotx" class="btn">Follow @clawdbotx</a>
+    <a href="https://x.com/clawdbotx" target="_blank" class="btn">
+      Follow @clawdbotx
+    </a>
   </div>
-</div>
+
+</section>
 
 </body>
 </html>
