--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ footer {
 
     <!-- LOGO ASLI CLAWDBOTX (EMBED BASE64) -->
     <div class="logo-wrapper">
-      <img class="logo-main" src="logo-clawd.png" alt="ClawdBotX Logo">
+      <img src="/logo.png" class="logo-main" alt="ClawdBotX Logo">
     </div>
 
     <h1>CLAWDBOTX</h1>
