--- a/index.html
+++ b/index.html
@@ -1,106 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ClawdBotX</title>
 
 <style>
-* {
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  background: black;
+  color: white;
   font-family: Arial, sans-serif;
 }
 
-body {
-  background: #000;
-  color: white;
+/* CENTER */
+.container {
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   text-align: center;
 }
 
-/* LOGO STYLE */
+/* LOGO SVG */
 .logo svg {
-  width: 160px;
-  margin-bottom: 20px;
-  filter: drop-shadow(0 0 20px red);
-  animation: pulse 2.5s infinite;
-}
-
-@keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.05); }
-  100% { transform: scale(1); }
+  width: 180px;
+  filter: drop-shadow(0 0 25px red);
 }
 
 /* TITLE */
 h1 {
-  font-size: 48px;
-  color: #ff1a1a;
-  letter-spacing: 3px;
-  margin-bottom: 8px;
+  color: red;
+  font-size: 42px;
+  margin: 10px 0;
 }
 
+/* TEXT */
 p {
   color: #aaa;
-  margin-bottom: 25px;
 }
 
 /* BUTTON */
-.btn {
+a.btn {
   display: inline-block;
-  padding: 12px 32px;
-  background: linear-gradient(135deg, #ff1a1a, #ff4d4d);
+  margin-top: 20px;
+  padding: 10px 25px;
+  background: red;
   color: white;
   text-decoration: none;
-  border-radius: 30px;
-  font-size: 14px;
-  transition: 0.3s;
-}
-
-.btn:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 25px red;
+  border-radius: 20px;
 }
 
 /* MOBILE */
 @media (max-width: 600px) {
-  h1 { font-size: 34px; }
-  .logo svg { width: 120px; }
+  .logo svg {
+    width: 120px;
+  }
+  h1 {
+    font-size: 32px;
+  }
 }
 </style>
 </head>
 <body>
 
-<div>
-
-  <!-- LOGO CLAWDBOTX (SIMPLE, KEREN, ELEGAN, PASTI MUNCUL) -->
+<div class="container">
   <div class="logo">
+
+    <!-- LOGO CLAWDBOTX (PASTI MUNCUL) -->
     <svg viewBox="0 0 200 200">
-      <!-- outer shape -->
-      <path d="M50 40 L100 20 L150 40 L160 100 L100 160 L40 100 Z"
-            stroke="#ff1a1a" stroke-width="6" fill="none"/>
-      
-      <!-- center diamond -->
-      <polygon points="100,60 120,100 100,140 80,100" fill="#ff1a1a"/>
-
-      <!-- claws -->
-      <path d="M50 80 L20 100 L50 120" stroke="#ff1a1a" stroke-width="5" fill="none"/>
-      <path d="M150 80 L180 100 L150 120" stroke="#ff1a1a" stroke-width="5" fill="none"/>
+      <path d="M50 40 C20 80, 40 140, 90 150" stroke="red" stroke-width="8" fill="none"/>
+      <path d="M150 40 C180 80, 160 140, 110 150" stroke="red" stroke-width="8" fill="none"/>
+      <polygon points="100,60 115,90 100,120 85,90" fill="red"/>
+      <path d="M90 150 L70 180" stroke="red" stroke-width="6"/>
+      <path d="M110 150 L130 180" stroke="red" stroke-width="6"/>
     </svg>
+
+    <h1>CLAWDBOTX</h1>
+    <p>AI • Crypto • Automation</p>
+
+    <a href="https://x.com/clawdbotx" class="btn">Follow @clawdbotx</a>
   </div>
-
-  <h1>CLAWDBOTX</h1>
-  <p>AI • Crypto • Automation</p>
-
-  <a href="https://x.com/clawdbotx" target="_blank" class="btn">
-    Follow @clawdbotx
-  </a>
-
 </div>
 
 </body>
