--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CLAWDBOTX</title>
+<title>ClawdBotX</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
 * {
@@ -214,7 +214,7 @@ footer {
     <a href="#about">About</a>
     <a href="#features">Features</a>
   </nav>
-  <a href="https://x.com/stecuwf" target="_blank" class="btn-nav">Follow X</a>
+  <a href="https://x.com/clawdbotx" target="_blank" class="btn-nav">Follow X</a>
 </header>
 
 <section class="hero" id="home">
@@ -228,14 +228,14 @@ footer {
     <h1>CLAWDBOTX</h1>
     <p>Autonomous AI system powering crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
-      <a href="https://x.com/stecuwf" target="_blank" class="btn">Follow @stecuwf</a>
+      <a href="https://x.com/clawdbotx" target="_blank" class="btn">Follow @clawdbotx</a>
       <a href="#features" class="btn outline">Explore</a>
     </div>
   </div>
 </section>
 
 <section class="about" id="about">
-  <h2>About CLAWDBOTX</h2>
+  <h2>About ClawdBotX</h2>
   <p>
     ClawdBotX is a futuristic AI agent built to analyze, predict, and automate across crypto and social ecosystems.
   </p>
@@ -259,7 +259,7 @@ footer {
 <section class="cta">
   <h2>Enter the Future</h2>
   <p>Follow ClawdBotX on X and join the AI x Crypto revolution.</p>
-  <a href="https://x.com/stecuwf" target="_blank" class="btn">Follow @stecuwf</a>
+  <a href="https://x.com/clawdbotx" target="_blank" class="btn">Follow @clawdbotx</a>
 </section>
 
 <footer>
@@ -268,5 +268,3 @@ footer {
 
 </body>
 </html>
-
-Ini sudah bagus tolong buatkan logo nya
