--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ClawdBotX</title>
+<title>clawdbotx</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
 * {
@@ -214,7 +214,7 @@ footer {
     <a href="#about">About</a>
     <a href="#features">Features</a>
   </nav>
-  <a href="https://x.com/clawdbotx" target="_blank" class="btn-nav">Follow X</a>
+  <a href="https://x.com/stecuwf" target="_blank" class="btn-nav">Follow X</a>
 </header>
 
 <section class="hero" id="home">
@@ -228,7 +228,7 @@ footer {
     <h1>CLAWDBOTX</h1>
     <p>Autonomous AI system powering crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
-      <a href="https://x.com/clawdbotx" target="_blank" class="btn">Follow @clawdbotx</a>
+      <a href="https://x.com/stecuwf" target="_blank" class="btn">Follow @stecuwf</a>
       <a href="#features" class="btn outline">Explore</a>
     </div>
   </div>
