--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ footer {
     <a href="#about">About</a>
     <a href="#features">Features</a>
   </nav>
-  <a href="https://x.com/stecuwf" target="_blank" class="btn-nav">Follow X</a>
+  <a href="https://x.com/clawdbotx" target="_blank" class="btn-nav">Follow X</a>
 </header>
 
 <section class="hero" id="home">
@@ -228,7 +228,7 @@ footer {
     <h1>CLAWDBOTX</h1>
     <p>Autonomous AI system powering crypto intelligence, automation, and digital evolution.</p>
     <div class="hero-btn">
-      <a href="https://x.com/stecuwf" target="_blank" class="btn">Follow @stecuwf</a>
+      <a href="https://x.com/clawdbotx" target="_blank" class="btn">Follow @clawdbotx</a>
       <a href="#features" class="btn outline">Explore</a>
     </div>
   </div>
